# bern-addresses

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  address_reform_1882.csv  codeless_occupations.csv  dividers.csv  gwr_addresses.csv  page_columns.csv
doc/: plan.md
ocr-lines/: 1861-04-15.csv  1862-07-31.csv  1863-06-30.csv  1864-08-15.csv  1865-08-15.csv  1866-09-15.csv  1867-09-15.csv  1868-08-31.csv  1869-12-15.csv  1871-05-30.csv  1873-03-31.csv  1875-05-31.csv  1877-03-31.csv  1879-06-30.csv  1881-09-30.csv  1891-05-31.csv
proofread/: 1822-02-01.txt  1860-02-01.txt  1861-04-15.txt  1862-07-31.txt  1863-06-30.txt  1864-08-15.txt  1865-08-15.txt  1866-09-15.txt  1867-09-15.txt  1868-08-31.txt  1869-12-15.txt  1871-05-30.txt  1873-03-31.txt  1875-05-31.txt  1877-03-31.txt  1879-06-30.txt  1881-09-30.txt  1882-12-15.txt  1885-12-15.txt  1888-08-01.txt  1891-05-31.txt  1893-05-31.txt  1894-06-15.txt  1895-05-31.txt  1896-11-15.txt  1897-07-15.txt  1898-12-01.txt  1900-02-15.txt  1901-08-20.txt  1902-10-04.txt  1903-11-02.txt  1904-11-30.txt  1905-11-15.txt  1906-11-25.txt  1907-11-15.txt  1908-11-10.txt  1909-10-25.txt  1910-10-22.txt  1911-10-31.txt  1912-11-15.txt  (+30 more)
reviewed/: 1860-02-01.csv  1861-04-15.csv  1862-07-31.csv  1879-06-30.csv
src/: HCL_CH_ISCO_19_PROF_1_2_1_level_6.csv  HCL_CH_ISCO_19_PROF_1_2_2_level_6.csv  HCL_NOGA_level_5.csv  affixes.txt  blackhole-lines.txt  build_release.py  chapters.csv  check_reviewed.py  companies.csv  convert_hocr_to_plaintext.py  detect_page_columns.py  detect_page_rotation.py  family_names.txt  (+26 more)
(+120 files in other folders)
