[project]
name = "bern-addresses"
version = "0.1.0"
description = "OCR project for Bern City Archives"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "opencv-python>=4.12.0.88",
    "pytest>=9.0.2",
]
